--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,14 @@ body {
     visibility: hidden;
 }
 
-
+.modal-button {
+    padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  cursor: pointer;
+}
 .modal-button {
 font-family: 'Roboto', sans-serif;
 font-weight: 600;
@@ -84,6 +91,14 @@ line-height: 1.5;
 letter-spacing: 0.04em;
 color: var( --logo-button-color);
 background-color: var(--secondary-background-color);
+border: 1px solid var( --footer-color);
+border-radius: 4px;
+}
+
+.modal-button:active {
+background: var(--logo-button-color);
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+border-radius: 4px;
 }
 /*++++++++/FILTER+++++++*/
 
@@ -136,7 +151,6 @@ color: var(--secondary-background-color);
 .logo-footer span {
   color: var(--logo-button-color);
 }
-
 
 /*++++++++/FOOTER+++++++*/
 
