--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,13 @@
-
 :root {
-    --color-primary:#434455;
-    --second-color: #2E2F42;
-    --logo-button-color: #4D5AE5;
-    --main-background-color: #E5E5E5;
-    --secondary-background-color: #F4F4FD;
-    --contact-description-color: #434455;
-    --white-color: #ffffff;
-    --footer-color: #E7E9FC;
+  --color-primary: #434455;
+  --second-color: #2e2f42;
+  --logo-button-color: #4d5ae5;
+  --main-background-color: #e5e5e5;
+  --secondary-background-color: #f4f4fd;
+  --contact-description-color: #434455;
+  --white-color: #ffffff;
+  --footer-color: #e7e9fc;
+  --hover-button: #404bbf;
 }
 
 .list {
@@ -21,76 +21,76 @@
 /*+++++++HEADER+++++++*/
 
 .logo {
-font-family: "Raleway", sans-serif;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.33;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--second-color);
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--second-color);
 }
 
 .logo span {
   color: var(--logo-button-color);
 }
 
-.link:hover,
-.link:focus {
-  color: var(--color-primary);
-}
-
-.link:active {
+.menu-link:hover,
+.menu-link:focus {
   color: var(--logo-button-color);
-
 }
 
 .menu-link {
-font-weight: 600;
-font-size: 16px;
-line-height: 1.5;
-color: var(--second-color);
-letter-spacing: 0.02em;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--second-color);
+  letter-spacing: 0.02em;
 }
 
 .contact {
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: var(--contact-description-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--contact-description-color);
 }
 
+.contact:hover,
+.contact:focus {
+  color: var(--logo-button-color);
+}
 /*+++++++/HEADER+++++++*/
-
-
 
 /*+++++++++++BODY++++++++++*/
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: var(--white-color);
+  font-family: "Roboto", sans-serif;
+  background-color: var(--white-color);
 }
 /* +++++++++++/BODY++++++++++ */
-
 
 /*++++++++++HERO+++++++*/
 
 .hero {
-background-color: var(--second-color);
+  background-color: var(--second-color);
 }
 
 .hero-title {
-font-weight: 600;
-font-size: 56px;
-line-height: 1.07;
-text-align: center;
-letter-spacing: 0.02em;
-color: var(--white-color);
+  font-weight: 600;
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--white-color);
 }
 
 .modal-button {
-  font-family: 'Roboto', sans-serif;
+  font-family: inherit;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 1.19;
   color: var(--white-color);
   background-color: var(--logo-button-color);
+
   cursor: pointer;
   border-style: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -99,86 +99,74 @@ color: var(--white-color);
 
 .modal-button:hover,
 .modal-button:focus {
-box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-border-radius: 4px;
-}
-
-.modal-button:active {
-background: #404BBF;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-border-radius: 4px;
+  background-color: var(--hover-button);
 }
 
 /*++++++++++/HERO+++++++*/
 
-
 /*++++++++ADVANTAGES++++++++*/
-.advantage-title{
- visibility: hidden;
+.advantage-title {
+  visibility: hidden;
 }
 /*++++++++/ADVANTAGES++++++++*/
 
-
 /*++++++++++COMPONENTS++++++++++*/
 .suptitle {
- font-weight: 600;
-font-size: 20px;
-line-height: 1.2;
-letter-spacing: 0.02em;
-color: var(--second-color);
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--second-color);
 }
 
 .section-title {
-font-weight: 600;
-font-size: 36px;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-transform: capitalize;
-color: var(--second-color);
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: var(--second-color);
 }
 
 .description-section {
   font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: var(--contact-description-color);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--contact-description-color);
 }
 
 /*++++++++++/COMPONENTS++++++++++*/
 
-
 /*++++++++++TEAM++++++++++++*/
 
 .team-section {
-  color: var(--secondary-background-color);
+  background-color: var(--secondary-background-color);
 }
 /*++++++++++/TEAM++++++++++++*/
 
 /*++++++++FOOTER+++++++*/
 
 .footer {
-background-color: var( --second-color);
+  background-color: var(--second-color);
 }
 
 .footer-about {
-color: var(--footer-color);
+  color: var(--footer-color);
 }
 
 .logo-footer {
-font-family: "Raleway", sans-serif;
-font-weight: 800;
-font-size: 18px;
-line-height: 1.33;
-letter-spacing: 0.03em;
-text-transform: uppercase;
-color: var(--secondary-background-color);
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.33;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--secondary-background-color);
 }
 
 .logo-footer span {
   color: var(--logo-button-color);
 }
 
-
 /*++++++++/FOOTER+++++++*/
-
